# metagen-dsl

./: .gitmodules  README.md  environment.yml  pyproject.toml  pytest.ini
metagen_dsl/: __init__.py  _backend.py  _docgen.py  _options.py  _viz.py  convex_polytope.py  docs.py  lifting.py  list_utils.py  math_utils.py  pattern.py  pattern_ops.py  procmeta_graph.py  procmeta_nodes.py  procmeta_translator.py  skeleton.py  structure.py  tile.py
tests/: conftest.py  fixture_data.py  test_cache.py  test_graph.py  test_integration.py  test_options.py  test_render.py  test_render_pyrender.py
