[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "metagen-dsl"
version = "0.1.0"
description = "MetaDSL: domain-specific language for metamaterial unit cells."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "networkx",
    "scipy",
]

[tool.setuptools.packages.find]
include = ["metagen_dsl*"]
