[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "metagen-dsl"
version = "0.1.0"
description = "MetaDSL: domain-specific language for metamaterial unit cells."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "networkx",
    "scipy",
]

[project.optional-dependencies]
# Native geometry + simulation backends
native = ["metagen-kernel", "metagen-simulator"]
# Notebook visualization
viz = ["k3d", "matplotlib"]
# Legacy offline/headless rendering (OSMesa required separately)
pyrender = ["pyrender"]
# Everything a notebook user would want
all = ["metagen-dsl[native,viz]"]

[tool.setuptools.packages.find]
include = ["metagen_dsl*"]
